# vazha-kola-api

./: Cargo.toml  Procfile  README.md  dockerfile
migrations/2022-03-13-175615_vkala/: down.sql  up.sql
src/: error_handler.rs  main.rs  schema.rs  tests.rs
src/db_mod/: auth.rs  authorize.rs  db_handler.rs  models.rs
src/handlers/: authorize.rs  db_handler.rs  models.rs
