[package]
name = "vazha-kola-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
dotenv="0.15"
tokio={version="1.8.4",features=["full"]}
serde={version="1.0",features=["derive"]}
serde_derive="1.0"
serde_json="1.0"
actix-cors="^0.5"
actix-web-httpauth="0.6"
diesel={version="1.4.8",features=["postgres","r2d2"]}
r2d2="0.8.9"
rust-argon2="0.8"
rand="0.8.5"
jsonwebtoken="8"
futures = "0.3.21"
actix-http = "2.2.0"
